fixed the overflow

--- a/starter-code/css/main style.css
+++ b/starter-code/css/main style.css
@@ -22,6 +22,7 @@ body {
     padding: 0;
     font-family: "Roboto Condensed", sans-serif;
     background-color: #131522;
+    height: 100vh;
 }
 
 .header {
