--- a/starter-code/css/responsive.css
+++ b/starter-code/css/responsive.css
@@ -195,7 +195,7 @@
 
 @media (max-width: 600px) {
     body {
-        overflow-y: hidden;
+        overflow-x: hidden;
     }
     .header {
         padding-inline: 50px;
